<resources>
    <string name="app_name">BhaiBhaiClinic</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="test_a">A</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="service_provider_list">Service Provider List</string>
    <string name="active">Active</string>
    <string name="inactive">Inactive</string>
    <string name="create">Create</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="gender">Gender</string>
    <string name="status">Status</string>
    <string name="save">Save</string>
    <string name="update">Update</string>

    <string-array name="gender">
        <item>Male</item>
        <item>Female</item>
        <item>Others</item>

    </string-array>
</resources>