<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".views.ChangeProviderFragment">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="0dp"
        android:layout_height="@dimen/_48sdp"
        android:background="@color/theme_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_18sdp"
            android:layout_marginStart="@dimen/_8sdp"
            android:src="@drawable/ic_back"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txt_dynamic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_8sdp"
            android:text="@string/create"
            android:textColor="@color/white"
            android:textSize="@dimen/_14ssp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageView"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="0dp"
        android:id="@+id/layout_name"
        android:layout_margin="@dimen/_12sdp"
        android:layout_height="@dimen/_50sdp"
        android:hint="@string/name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:inputType="textPersonName"
            android:textSize="@dimen/_13ssp"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="0dp"
        android:layout_margin="@dimen/_12sdp"
        android:layout_height="@dimen/_50sdp"
        android:id="@+id/layout_email"
        android:hint="@string/email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout_name">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:inputType="textEmailAddress"
            android:textSize="@dimen/_13ssp"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="0dp"
        android:layout_margin="@dimen/_12sdp"
        android:layout_height="@dimen/_44sdp"
        android:hint="@string/gender"
        android:id="@+id/layout_gender"
        app:endIconDrawable="@drawable/ic_edit_gender"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout_email">

        <AutoCompleteTextView
            android:id="@+id/autoGender"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="@dimen/_12ssp"
            android:paddingStart="@dimen/_10sdp"
            android:inputType="none"
            tools:text="Male" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="0dp"
        android:layout_marginHorizontal="@dimen/_12sdp"
        android:layout_marginVertical="@dimen/_19sdp"
        android:layout_height="@dimen/_44sdp"
        android:hint="@string/status"
        android:id="@+id/layout_status"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout_gender">

        <AutoCompleteTextView
            android:id="@+id/autoViewStatus"
            android:layout_width="match_parent"
            android:textSize="@dimen/_12ssp"
            android:paddingStart="@dimen/_10sdp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:inputType="none"
            tools:text="Active" />

    </com.google.android.material.textfield.TextInputLayout>


    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/swOnOff"
        android:elevation="@dimen/_8sdp"
        android:layout_width="@dimen/_33sdp"
        android:layout_height="@dimen/_16sdp"
        android:layout_gravity="center"
        android:layout_marginEnd="@dimen/_10sdp"
        android:thumb="@drawable/ic_dbc_switch"
        app:layout_constraintBottom_toBottomOf="@+id/layout_status"
        app:layout_constraintEnd_toEndOf="@+id/layout_status"
        app:layout_constraintTop_toTopOf="@+id/layout_status"
        app:showText="false"
        app:track="@drawable/ic_dbc_switch_track" />


    <com.google.android.material.button.MaterialButton
        android:layout_width="0dp"
        android:id="@+id/submit_area"
        android:text="@string/save"
        android:layout_marginTop="@dimen/_40sdp"
        android:layout_height="@dimen/_50sdp"
        android:textColor="@color/white"
        android:textSize="@dimen/_14ssp"
        android:textStyle="bold"
        android:textAllCaps="true"
        app:layout_constraintEnd_toEndOf="@+id/layout_status"
        app:layout_constraintStart_toStartOf="@+id/layout_status"
        app:layout_constraintTop_toBottomOf="@+id/layout_status" />

</androidx.constraintlayout.widget.ConstraintLayout>